--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Casey's Personal Website</title>
     </head>
-    <body>
+    <body style="background-color: #91D8E4;">
         <table cellspacing="20">
             <tr>
                 <td>
