--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <title>Casey's Personal Website</title>
+        <style>
+            body {
+                background-color: #91D8E4;
+            }
+            hr {
+                border-style: none;
+                border-top-style: dotted;
+                border-color: #EAFDFC;
+                border-width: 5px;
+                width: 5%;
+            }
+        </style>
     </head>
-    <body style="background-color: #91D8E4;">
+    <body>
         <table cellspacing="20">
             <tr>
                 <td>
