Removed style tag from index.html; created styles.css for styling entire directory; added new styling for header text color

--- a/index.html
+++ b/index.html
@@ -3,18 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Casey's Personal Website</title>
-        <style>
-            body {
-                background-color: #91D8E4;
-            }
-            hr {
-                border-style: none;
-                border-top-style: dotted;
-                border-color: #EAFDFC;
-                border-width: 5px;
-                width: 5%;
-            }
-        </style>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
         <table cellspacing="20">
